# idla-person-reid

./: .gitignore  CMakeLists.txt  README.md  cuhk03.cpp  main.cpp  requirements.txt
include/: dataset.h  difference.h  difference_impl.h  difference_impl_cpu.h  difference_impl_gpu.h  input.h  multiclass_less.h  reinterpret.h  reshape.h
include/idla/: input_pair.h  multiclass_less.h  net_def.h  xnbhd_diff.h  xnbhd_diff_impl_cpu.h  xnbhd_diff_impl_gpu.h
scripts/: unpack_cuhk03.py
src/: dataset.cpp  difference.cu  difference_impl.cpp  difference_impl.cu  input.cpp  input_pair.cpp  xnbhd_diff_impl.cpp  xnbhd_diff_impl.cu
src/apps/: cuhk03.cpp  datasets.cpp  datasets.h
test/: CMakeLists.txt  difference.cpp  input_test.h  reinterpret.cpp
